[package]
name = "favilla-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
favilla = { path = "../favilla" }
ash = "0.33"
ash-window = "0.7"
vk-shader-macros = "0.2.6"
cgmath = "0.18"
raw-window-handle = "0.3.3"
winit = "0.24"
thiserror = "1.0"
anyhow = "1.0"
memoffset = "0.6"
cstr = "0.2.8"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }
