[package]
name = "favilla-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
favilla = { path = "../favilla" }
ash = { version = "0.37", features = ["linked"]}
ash-window = "0.10"
vk-shader-macros = "0.2.8"
cgmath = "0.18"
raw-window-handle = "0.5.0"
winit = "0.26"
thiserror = "1.0"
anyhow = "1.0"
memoffset = "0.6"
cstr = "0.2.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
