[package]
name = "favilla"
version = "0.2.1"
edition = "2018"
description = "A library with utilities for Vulkan programming."
authors = ["StygianLightning <denrellum@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/StygianLightning/favilla"
keywords = ["vulkan"]

[dependencies]
ash = "0.37"
cgmath = "0.18"
thiserror = "1.0"
tracing = "0.1"
